link_libraries(m)
add_subdirectory(0000)
add_subdirectory(0001)
add_subdirectory(0002)
add_subdirectory(0003)
add_subdirectory(0004)
add_subdirectory(0005)
add_subdirectory(0006)
add_subdirectory(0007)
add_subdirectory(0008)
add_subdirectory(0009)
add_subdirectory(0010)
add_subdirectory(0011)
add_subdirectory(0012)
add_subdirectory(0013)
add_subdirectory(0014)
add_subdirectory(0015)
add_subdirectory(0016)
add_subdirectory(0017)
add_subdirectory(0018)
add_subdirectory(0019)
add_subdirectory(0020)
add_subdirectory(0021)
add_subdirectory(0022)
add_subdirectory(0023)
add_subdirectory(0024)
add_subdirectory(0025)
add_subdirectory(0026)
add_subdirectory(0027)
add_subdirectory(0028)
add_subdirectory(0029)
add_subdirectory(0030)
add_subdirectory(0031)
add_subdirectory(0032)
add_subdirectory(0033)
add_subdirectory(0034)
add_subdirectory(0035)
add_subdirectory(0036)
add_subdirectory(0037)
add_subdirectory(0038)
