link_libraries(m)
add_subdirectory(0000)
add_subdirectory(0001)
add_subdirectory(0002)
add_subdirectory(0003)
add_subdirectory(0004)
add_subdirectory(0005)
add_subdirectory(0006)
add_subdirectory(0007)
add_subdirectory(0008)
add_subdirectory(0009)
add_subdirectory(0010)
add_subdirectory(0011)
add_subdirectory(0012)
add_subdirectory(0013)
add_subdirectory(0014)
add_subdirectory(0015)
add_subdirectory(0016)
add_subdirectory(0017)
add_subdirectory(0018)
add_subdirectory(0019)
add_subdirectory(0020)
add_subdirectory(0021)
add_subdirectory(0022)
