link_libraries(m)
add_subdirectory(0000)
add_subdirectory(0001)
add_subdirectory(0002)
add_subdirectory(0003)
add_subdirectory(0004)
add_subdirectory(0005)
add_subdirectory(0006)
add_subdirectory(0007)
add_subdirectory(0008)
add_subdirectory(0009)
add_subdirectory(0010)
add_subdirectory(0011)
add_subdirectory(0012)
add_subdirectory(0013)
add_subdirectory(0014)
add_subdirectory(0015)
add_subdirectory(0016)
add_subdirectory(0017)
add_subdirectory(0018)
add_subdirectory(0019)
add_subdirectory(0020)
add_subdirectory(0021)
add_subdirectory(0022)
add_subdirectory(0023)
add_subdirectory(0024)
add_subdirectory(0025)
add_subdirectory(0026)
add_subdirectory(0027)
add_subdirectory(0028)
add_subdirectory(0029)
add_subdirectory(0030)
add_subdirectory(0031)
add_subdirectory(0032)
add_subdirectory(0033)
add_subdirectory(0034)
add_subdirectory(0035)
add_subdirectory(0036)
add_subdirectory(0037)
add_subdirectory(0038)
add_subdirectory(0039)
add_subdirectory(0040)
add_subdirectory(0041)
add_subdirectory(0042)
add_subdirectory(0043)
add_subdirectory(0044)
add_subdirectory(0045)
add_subdirectory(0046)
add_subdirectory(0047)
add_subdirectory(0048)
add_subdirectory(0049)
add_subdirectory(0050)
add_subdirectory(0051)
add_subdirectory(0052)
add_subdirectory(0053)
add_subdirectory(0054)
add_subdirectory(0055)
add_subdirectory(0056)
add_subdirectory(0057)
add_subdirectory(0058)
add_subdirectory(0059)
add_subdirectory(0060)
add_subdirectory(0061)
add_subdirectory(0062)
add_subdirectory(0063)
add_subdirectory(0064)
add_subdirectory(0065)
add_subdirectory(0066)
add_subdirectory(0067)
add_subdirectory(0068)
add_subdirectory(0069)
add_subdirectory(0070)
add_subdirectory(0071)
add_subdirectory(0072)
add_subdirectory(0073)
add_subdirectory(0074)
add_subdirectory(0075)
add_subdirectory(0076)
add_subdirectory(0077)
add_subdirectory(0078)
add_subdirectory(0079)
add_subdirectory(0080)
add_subdirectory(0081)
add_subdirectory(0082)
add_subdirectory(0083)
add_subdirectory(0084)
add_subdirectory(0085)
add_subdirectory(0086)
add_subdirectory(0087)
add_subdirectory(0088)
add_subdirectory(0089)
add_subdirectory(0090)
add_subdirectory(0091)
add_subdirectory(0092)
add_subdirectory(0093)
add_subdirectory(0094)
add_subdirectory(0095)
add_subdirectory(0096)
add_subdirectory(0097)
add_subdirectory(0098)
add_subdirectory(0099)
add_subdirectory(0100)
add_subdirectory(0101)
add_subdirectory(0102)
add_subdirectory(0103)
add_subdirectory(0104)
add_subdirectory(0105)
add_subdirectory(0106)
add_subdirectory(0107)
add_subdirectory(0108)
add_subdirectory(0109)
add_subdirectory(0110)
add_subdirectory(0111)
add_subdirectory(0112)
add_subdirectory(0113)
add_subdirectory(0114)
add_subdirectory(0115)
add_subdirectory(0116)
add_subdirectory(0117)
add_subdirectory(0118)
add_subdirectory(0119)
add_subdirectory(0120)
add_subdirectory(0121)
add_subdirectory(0122)
add_subdirectory(0123)
add_subdirectory(0124)
add_subdirectory(0125)
add_subdirectory(0126)
add_subdirectory(0127)
add_subdirectory(0128)
add_subdirectory(0129)
add_subdirectory(0130)
add_subdirectory(0131)
add_subdirectory(0132)
add_subdirectory(0133)
add_subdirectory(0134)
add_subdirectory(0135)
add_subdirectory(0136)
add_subdirectory(0137)
add_subdirectory(0138)
add_subdirectory(0139)
add_subdirectory(0140)
add_subdirectory(0141)
add_subdirectory(0142)
add_subdirectory(0143)
add_subdirectory(0144)
add_subdirectory(0145)
add_subdirectory(0146)
add_subdirectory(0147)
add_subdirectory(0148)
add_subdirectory(0149)
add_subdirectory(0150)
add_subdirectory(0151)
add_subdirectory(0152)
add_subdirectory(0153)
add_subdirectory(0154)
add_subdirectory(0155)
add_subdirectory(0156)
add_subdirectory(0157)
add_subdirectory(0158)
add_subdirectory(0159)
add_subdirectory(0160)
add_subdirectory(0161)
add_subdirectory(0162)
add_subdirectory(0163)
add_subdirectory(0164)
add_subdirectory(0165)
add_subdirectory(0166)
add_subdirectory(0167)
add_subdirectory(0168)
add_subdirectory(0169)
add_subdirectory(0170)
add_subdirectory(0171)
add_subdirectory(0172)
add_subdirectory(0173)
add_subdirectory(0174)
add_subdirectory(0175)
add_subdirectory(0176)
add_subdirectory(0177)
